v1.0.0
Resolved Lua error caused by trying to set names for units outside party or raid
Update debug text method to accept multiple arguments

v0.1.1
Attempt to fix name flickering issue

v0.1.0
AddOn database structure refactored
Update UI to associate multiple characters with a single nickname
Update debug messaging + add new translation strings
Add IsGroupedUp method
Add delay to raid frame checks to allow data to populate when first loading into game

v0.0.2
Rename AddOn and update references to reflect new name

v0.0.1
Initial build and test